Fixed UI on mobile devices for most components

--- a/webapp/src/Features/user/Inventory/singleCarComp/ImageCarousel.css
+++ b/webapp/src/Features/user/Inventory/singleCarComp/ImageCarousel.css
@@ -1,12 +1,10 @@
 /* ImageCarousel.css */
 .carousel-item img {
-    width: 100%;
-    height: auto;
-    object-fit: contain; /* Ensures the image covers the available space without stretching */
-    max-height: 500px; /* Ensures a maximum height for the image */
-    transition: transform 0.3s ease-in-out; /* Smooth transition */
-  }
-  
+  width: 100%; /* Make the image responsive */
+  height: auto;
+  object-fit: contain;
+  max-height: 500px;
+}
   .carousel-item {
     display: flex;
     justify-content: center; /* Center the image horizontally */
